# Regium-Klavye

./: .gitignore  LICENSE  README.md  pyproject.toml  regium_klavye.py  rkapi.py  udev.py
docs/: conf.py  index.rst
docs/devices/: RK68(pre2023v).rst
helpers/: __init__.py  colors.py  param_parser.py
keyboard_parts/: __init__.py  key.py  keyboard.py
keyboard_profiles/: RK68.py  __init__.py  profile.py
keyboard_profiles/profile_types/: __init__.py  commands.py  model.py  profile_type.py
keyboard_profiles/profiles/: RK68.py
regium_klavye/: __init__.py  __main__.py  main.py  rkapi.py  udev.py  version.py
regium_klavye/helpers/: __init__.py  colors.py  param_parser.py
regium_klavye/keyboard_parts/: __init__.py  key.py  keyboard.py
regium_klavye/keyboard_profiles/: __init__.py
regium_klavye/keyboard_profiles/profile_types/: __init__.py  commands.py  model.py  profile_type.py
regium_klavye/keyboard_profiles/profiles/: RK68.py
regium_klavye/rkapi/: __init__.py
regium_klavye/rkapi/helpers/: colors.py
regium_klavye/rkapi/keyboard_parts/: __init__.py  key.py  keyboard.py
regium_klavye/rkapi/keyboard_profiles/profile_types/: model.py
regium_klavye/rkapi/keyboard_profiles/profiles/: RK68.py
tests/: test_key.py  test_keyboard.py
