[project]
name = "regium_klavye_AIRBLAST"
version = "0.0.1"
authors = [
  {name="Tayfun Bocek", email="tayfunbocek@live.ca"},
]
description = "An application and API to control supported Royal Kludge keyboards."
requires-python = ">=3.10"
dependencies = ["hidapi<=0.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py311"]
include = '''
(
  ^.*\.py
  | ^.*\.pyx
)
'''

[tool.ruff]
extend-select = [
  "D", "I"
]
per-file-ignores = {"__init__.py"=["F401"], "**/{keyboard_parts}/*"=["D100"], "**/{profile_types}/*"=["D101"], "version.py"=["D100"]}
extend-ignore = ["D107"]
fixable = ["I001"]
line-length = 88
exclude = ["profiles", "docs"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
